# polymaster

./: .gitignore  Cargo.toml  QUICKSTART.md  README.md  instructions.md  instructions_for_ai_agent.md
docs/: API_REFERENCE.md
docs/plans/: 2026-02-24-autonomous-trading-design.md  2026-02-25-prowl-bot-design.md
integration/: .env.example  README.md  package-lock.json  package.json  providers.json
integration/skill/: SKILL.md
integration/skill/wwatcher-trader/: SKILL.md
integration/skill/wwatcher-trader/agents/: decision.md  executor.md  monitor.md  orderbook.md  portfolio.md  postmortem.md  researcher.md  risk.md  scanner.md
integration/skill/wwatcher-trader/config/: setup.md
integration/skill/wwatcher-trader/contexts/: crypto.md  politics.md  sports.md  weather.md
integration/skill/wwatcher-trader/templates/: config.json  improvements.md  portfolio.json
integration/src/: cli.ts  index.ts  server.ts
integration/src/providers/: perplexity.ts  registry.ts
integration/src/util/: env.ts  types.ts
src/: config.rs  kalshi.rs  main.rs  polymarket.rs
src/alerts/: anomaly.rs  display.rs  history.rs  mod.rs  sound.rs  webhook.rs
src/commands/: mod.rs  setup.rs  status.rs  test.rs  watch.rs
